<resources>
    <string name="app_name">Mouthpiece</string>
    <string name="From">From</string>
    <string name="OMEGA">OMEGA</string>
    <string name="University_of_Pretoria">University of Pretoria</string>
    <string name="loginB">Login</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="mpImage">University of Pretoria Logo</string>
    <string name="description">Add activity Mouth Display Description here</string>
    <string name="reset_to_default">Reset To Default</string>
    <string name="mouth">Mouth</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="username">Username</string>
    <string name="revealPas">Show Password</string>
    <string name="users_name">Users Names</string>
    <string name="userPassTextV">userPassTextV</string>
    <string name="users_surname">Users Surname</string>
    <string name="revealPass">Reveal Password</string>
    <string name="prompt_password">Password</string>
    <string name="submitButton">Submit</string>
    <string name="dobEnter">Date of Birth</string>
    <string name="dateB">Date</string>
    <string name="regViewer">Register</string>
    <string name="first_fragment_label">First Fragment Label</string>
    <string name="second_fragment_label">Second Fragment Label</string>
    <string name="trainAI">Train the AI</string>
    <string name="trainButton">Click and Hold</string>
    <string name="trainingSentence">Shaw, those twelve beige hooks are joined if I patch a young, gooey mouth.</string>
    <string name="testTrainingButton">Test Training Activity</string>
    <string name="testMouthpieceButton">Test Mouth Display</string>
    <string name="testSettingsButton">Test Settings Activity</string>
    <string name="PleaseReadText">Please read the following text:</string>
    <string name="Phonetic_Pangram_Read">That quick beige fox jumped in the air over each thin dog. Look out, I shout, for he\'s foiled you again, creating chaos</string>
    <string name="PromptToTrain">Enable Voice Training</string>
    <string name="StopRecord">Stop voice recording</string>
    <string name="sign_up">Sign Up</string>
    <string name="mouthpiece">Mouthpiece</string>
    <string name="skip"><![CDATA[Skip]]></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_hint">mouthpiece@gmail.com</string>
    <string name="email_address">Email Address</string>
    <string name="emailAddress">emailAddress</string>
    <string name="formant_based">Formant Based</string>
    <string name="volume_based">Volume Based</string>
    <string name="start_creation">Start Creation</string>
    <string name="mouth_creation">Mouth Creation</string>
    <string name="fragmentSort">Sort by:</string>
    <string name="fragmentType">Type:</string>
    <string name="Ratings">Ratings :</string>
    <string name="fragmentButtonApply">Apply</string>
    <string name="fragmentButtonCancel">Cancel</string>
    <string name="downloads">Downloads:</string>
    <string name="place_holder">Place_holder</string>
    <string name="Notice_pmpt">Notice:</string>
    <string name="NoticeText">In order to create a new mouth, 12 separate images need to be uploaded for each shape of the phonetic alphabet</string>
    <string name="AccecptTxt">Click the accept button if you are willing to upload the 12 images</string>
    <string name="accept_btn">Accept</string>
    <string name="decline_btn">Decline</string>
    <string name="mouthShapesImageDescr">mouth shapes image</string>
    <string name="motto">We Do the Talking</string>
    <string name="mouthShape1">A E I</string>
    <string name="mouthShape2">L</string>
    <string name="mouthShape3">O</string>
    <string name="mouthShape4">C D G K N S T X Y Z</string>
    <string name="mouthShape5">F V</string>
    <string name="mouthShape6">Q W</string>
    <string name="mouthShape7">B M P</string>
    <string name="mouthShape8">U</string>
    <string name="mouthShape9">Ee</string>
    <string name="mouthShape10">R</string>
    <string name="mouthShape11">Th</string>
    <string name="mouthShape12">Ch J Sh</string>
    <string name="confirmation">Confirmation</string>
    <string name="accept">Accept</string>
    <string name="filter">Filter</string>
    <string name="TestTXT">Test recorded audio</string>
    <string name="vTraining">Voice Training</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Techies</string>
    <string name="nav_header_subtitle">techies@demolition.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_select_mouth">Select Mouth</string>
    <string name="menu_create_mouth">Create Mouth</string>
    <string name="menu_training">Training</string>
    <string name="menu_help">Help</string>
    <string name="menu_image_upload">Image Upload</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_companion_website">Companion Website</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_manage">Manage</string>
    <string name="Name">Name:</string>
    <string name="Subject">Subject:</string>
    <string name="DescriptionText">Description:</string>
    <string name="FeedbackInstructions">This page is to report any errors in the application or to tell us what you think of our app. If you wish to write anonymously, just tick the anonymous box below.</string>
    <string name="FeedbackText">Feedback Page</string>
    <string name="Feedback">Feedback</string>
    <string name="emailTxt">Email:</string>
    <string name="anonymousTxt">Anonymous</string>
    <string name="urlSite">http://102.133.170.83:5000/addFeedback</string>
    <string name="remember">Remember Me</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="username_example">Talker#1</string>
    <string name="choose">Choose Image</string>
    <string name="TODO">Need to add @string here</string>
    <string name="ms1">Mouth Shape 1/12</string>
    <string name="ms2">Mouth Shape 2/12</string>
    <string name="ms3">Mouth Shape 3/12</string>
    <string name="ms4">Mouth Shape 4/12</string>
    <string name="ms5">Mouth Shape 5/12</string>
    <string name="ms6">Mouth Shape 6/12</string>
    <string name="ms7">Mouth Shape 7/12</string>
    <string name="ms8">Mouth Shape 8/12</string>
    <string name="ms9">Mouth Shape 9/12</string>
    <string name="ms10">Mouth Shape 10/12</string>
    <string name="ms11">Mouth Shape 11/12</string>
    <string name="ms12">Mouth Shape 12/12</string>
    <string name="yours">Your Image:</string>
    <string name="makeSure">Make sure to upload the right picture.</string>
    <string name="shapeUp">Shape to upload:</string>
    <string name="creator">Creator Name</string>
    <string name="likes">Likes: </string>
    <string name="select">Select</string>
    <string name="title">Title</string>
    <string name="help">Do you need Help?</string>
    <string name="frequently_asked">Here are some frequently asked questions:</string>
    <string name="question1">How do I create an account?</string>
    <string name="answer1">Answer: On opening the app, click the Register button, enter the necessary information and click Sign Up.</string>
    <string name="question2">How to upload mouth pieces?</string>
    <string name="answer2">Answer: Have all the necessary images needed and </string>
    <string name="question3">Is it necessary to update the app?</string>
    <string name="answer3">Answer: To have the newest features available it is recommended to keep the app up to date.</string>
    <string name="question4">What is Voice Training?</string>
    <string name="answer4">Answer: To function properly the app must be trained to recognize your speech pattern and behaviour and improve the animation. Go to the Voice Training page and follow the instructions given.</string>
    <string name="question5">What should I do when my password is forgotten?</string>
    <string name="answer5">Answer: Click the "Forgot Password" and a reset link will be sent to your email address.</string>

    <string name="app_name">Mouthpiece</string>
    <string name="volume_button">Volume</string>
    <string name="formant_button">Formant</string>
    <!-- element text -->
    <string name="action_status_text">Read the sentence below. Tap the microphone to record</string>
    <string name="delete_icon_label_text">Delete all</string>
    <string name="play_icon_label_text">Play audio</string>
    <string name="profile_count_label_text">Profiles created</string>
    <string name="profile_reading_text">The quick brown fox jumps over the lazy dog</string>
    <string name="record_icon_label_text">Record</string>
    <string name="save_button_text">Save</string>
    <!-- element descriptions -->
    <string name="action_status_description">Module heading</string>
    <string name="delete_icon_label_description">Label for delete icon</string>
    <string name="delete_icon_description">Delete recording icon</string>
    <string name="play_icon_description">Play recording icon</string>
    <string name="play_icon_label_description">Label for play icon</string>
    <string name="profile_count_description">Number of profiles the user has</string>
    <string name="profile_count_label_description">Label for text displaying number of profiles</string>
    <string name="profile_reading_description">Sentence read by user</string>
    <string name="record_icon_label_description">Label for record icon</string>
    <string name="save_icon_description">Save recording button</string>
    <string name="start_icon_description">Start recording icon</string>
    <string name="stop_icon_description">Stop recording icon</string>
    <!-- runtime text -->
    <string name="while_recording">Recording&#8230;</string>



    <string-array name="feedback_choices">
        <item>Design Feedback</item>
        <item>Application Bugs</item>
        <item>Errors</item>
        <item>Application Review</item>
        <item>Companion Website</item>
        <item>Other</item>
    </string-array>

</resources>
