<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">



    <group android:checkableBehavior="single">
        <item
        android:id="@+id/nav_home"
        android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_select_mouth"
            android:title="@string/menu_select_mouth" />
        <item
            android:id="@+id/nav_create_mouth"
            android:title="@string/menu_create_mouth" />
        <item
            android:id="@+id/nav_training"
            android:title="@string/menu_training" />
        <item
            android:id="@+id/nav_website"
            android:title="@string/menu_companion_website" />


    </group>

    <item android:title="@string/menu_manage">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/menu_feedback" />
            <item
                android:id="@+id/nav_settings"
                android:title="Settings"
                />
        </menu>
    </item>





</menu>
