<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.omega.mouthpiece.LandingFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_landing">

    </fragment>


    <fragment
        android:id="@+id/nav_select_mouth"
        android:name="com.omega.mouthpiece.SelectionFragment"
        android:label="@string/menu_select_mouth"
        tools:layout="@layout/fragment_selection" />

    <fragment
        android:id="@+id/nav_create_mouth"
        android:name="com.omega.mouthpiece.UploadFragmentFrontFragment"
        android:label="@string/menu_create_mouth"
        tools:layout="@layout/fragment_mouthupload_front" />

    <fragment
        android:id="@+id/nav_training"
        android:name="com.omega.mouthpiece.TrainingFragment"
        android:label="@string/menu_create_mouth"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/nav_website"
        android:name="com.omega.mouthpiece.WebFragment"
        android:label="@string/menu_companion_website"
        tools:layout="@layout/fragment_website" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.omega.mouthpiece.FeedFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.omega.mouthpiece.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

</navigation>