<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".VoiceProfile_Trainer"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/profile_count"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@android:color/white"
        android:contentDescription="@string/profile_count_description"
        android:gravity="end|center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/profile_count_label"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:background="@android:color/white"
        android:contentDescription="@string/profile_count_label_description"
        android:gravity="start|center"
        android:text="@string/profile_count_label_text"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/action_status"
        android:layout_width="375dp"
        android:layout_height="115dp"
        android:background="@android:color/white"
        android:contentDescription="@string/action_status_description"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/action_status_text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194" />

    <TextView
        android:id="@+id/profile_reading"
        android:layout_width="350dp"
        android:layout_height="115dp"
        android:background="@android:color/white"
        android:contentDescription="@string/profile_reading_description"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/profile_reading_text"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/start_recording"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807" />

    <ImageView
        android:id="@+id/delete_all"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/delete_icon_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/start_recording"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669"
        app:srcCompat="@drawable/delete_recording" />

    <TextView
        android:id="@+id/delete_icon_label"
        android:layout_width="130dp"
        android:layout_height="20dp"
        android:background="@android:color/white"
        android:contentDescription="@string/delete_icon_label_description"
        android:gravity="center"
        android:text="@string/delete_icon_label_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_all"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/start_recording"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:contentDescription="@string/start_icon_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692"
        app:srcCompat="@drawable/start_recording" />

    <TextView
        android:id="@+id/record_icon_label"
        android:layout_width="145dp"
        android:layout_height="20dp"
        android:background="@android:color/white"
        android:contentDescription="@string/record_icon_label_description"
        android:gravity="center"
        android:text="@string/record_icon_label_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_recording"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/play_recording"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:contentDescription="@string/play_icon_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/start_recording"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669"
        app:srcCompat="@drawable/play_recording" />

    <TextView
        android:id="@+id/play_icon_label"
        android:layout_width="130dp"
        android:layout_height="20dp"
        android:background="@android:color/white"
        android:contentDescription="@string/play_icon_label_description"
        android:gravity="center"
        android:text="@string/play_icon_label_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_recording"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/save_recording"
        android:layout_width="300dp"
        android:layout_height="70sp"
        android:background="@android:color/black"
        android:contentDescription="@string/save_icon_description"
        android:text="@string/save_button_text"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />


</androidx.constraintlayout.widget.ConstraintLayout>