<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoadingPage">

    <TextView
        android:id="@+id/fromText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/famosa"
        android:text="@string/From"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/teamText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon"
        app:layout_constraintVertical_bias="0.933" />

    <TextView
        android:id="@+id/teamText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/famosa_heavy"
        android:text="@string/OMEGA"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/uniText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/famosa"
        android:text="@string/University_of_Pretoria"
        android:textColor="#7D7D7D"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamText"
        app:layout_constraintVertical_bias="0.36" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="262dp"
        android:layout_height="203dp"
        android:background="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/teamText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mottoText"
        app:layout_constraintVertical_bias="0.503"
        app:srcCompat="@drawable/icon01"
        android:contentDescription="@string/TODO" />

    <TextView
        android:id="@+id/title"
        android:layout_width="353dp"
        android:layout_height="81dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/famosa_heavy"
        android:text="@string/app_name"
        android:contentDescription="@string/title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FF312E"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mottoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/famosa"
        android:text="@string/motto"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>